# desktop

./: .editorconfig  .eslintrc.json  .gitignore  .pnp.cjs  .yarnrc.yml  README.md  angular.json  com.onlivfe.desktop  com.onlivfe.metainfo.xml  next.config.js  package-lock.json  package.json  release.sh  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
.github/workflows/: ui.yml
frontend-notes/: notes.md
src/: index.html  index.ts  karma.conf.js  locale.loader.spec.ts  locale.loader.ts  main.ts  styles.css  test.ts
src-tauri/: Cargo.toml  com.onlivfe.app.desktop  com.onlivfe.app.metainfo.xml  deny.toml  rustfmt.toml  tauri.conf.json
src-tauri/bindings/: AuthStatus.ts  GenericAccount.ts  PlatformId.ts  PlatformType.ts
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  main.rs  user.rs
src/app/: accounts-auth.service.ts  app.component.spec.ts  app.component.ts  routes.spec.ts  routes.ts
src/app/friends/: friends.component.html  friends.component.ts
src/app/instances/: instances.component.html  instances.component.ts
src/app/nav/: nav.component.html  nav.component.ts
src/app/settings/: routes.ts  settings.component.html  settings.component.ts
src/assets/: material-icons.css  roboto.css
src/assets/locale/: messages.en.json  messages.fi.json  messages.json
src/components/: LeftSidebar.tsx  RightSidebar.tsx  index.ts
src/components/RightSidebar/: RightSidebar.tsx
src/components/views/: FriendInstances.tsx  index.ts
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
src/styles/fonts/fira-sans/: fira.css
(+14 files in other folders)
